// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/Feed Widget default 1`] = `
<div
  className="feed_widget"
>
  <div
    className="feed_widget__item"
  >
    <img
      alt="React is officially dominating the world!"
      className="feed_widget__image"
      src="./cdn/news1.png"
    />
    <div
      className="feed_widget__content"
    >
      <h2
        className="feed_widget__title"
      >
        React is officially dominating the world!
      </h2>
      <span
        className="feed_widget__info"
      >
        <span
          className="feed_widget__author"
        >
          ReactMcReactyFace
        </span>
        <span
          className="feed_widget__date"
        >
          April 15, 2018
        </span>
      </span>
    </div>
  </div>
  <div
    className="feed_widget__item"
  >
    <img
      alt="SkyNet core development team claimed to have finished porting their UI to React!"
      className="feed_widget__image"
      src="./cdn/news3.jpg"
    />
    <div
      className="feed_widget__content"
    >
      <h2
        className="feed_widget__title"
      >
        SkyNet core development team claimed to have finished porting their UI to React!
      </h2>
      <span
        className="feed_widget__info"
      >
        <span
          className="feed_widget__author"
        >
          ReactMcReactyFace
        </span>
        <span
          className="feed_widget__date"
        >
          April 15, 2018
        </span>
      </span>
    </div>
  </div>
  <div
    className="feed_widget__item"
  >
    <img
      alt="React Refrigerator officially released!"
      className="feed_widget__image"
      src="./cdn/news5.jpeg"
    />
    <div
      className="feed_widget__content"
    >
      <h2
        className="feed_widget__title"
      >
        React Refrigerator officially released!
      </h2>
      <span
        className="feed_widget__info"
      >
        <span
          className="feed_widget__author"
        >
          ReactMcReactyFace
        </span>
        <span
          className="feed_widget__date"
        >
          April 15, 2018
        </span>
      </span>
    </div>
  </div>
  <div
    className="feed_widget__item"
  >
    <img
      alt="React confirmed to officially sponsors Olympic Games 2034"
      className="feed_widget__image"
      src="./cdn/news4.jpeg"
    />
    <div
      className="feed_widget__content"
    >
      <h2
        className="feed_widget__title"
      >
        React confirmed to officially sponsors Olympic Games 2034
      </h2>
      <span
        className="feed_widget__info"
      >
        <span
          className="feed_widget__author"
        >
          ReactMcReactyFace
        </span>
        <span
          className="feed_widget__date"
        >
          April 15, 2018
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component/Feed Widget item 1`] = `
<div
  className="feed_widget__item"
>
  <img
    alt="React is officially dominating the world!"
    className="feed_widget__image"
    src="./cdn/news1.png"
  />
  <div
    className="feed_widget__content"
  >
    <h2
      className="feed_widget__title"
    >
      React is officially dominating the world!
    </h2>
    <span
      className="feed_widget__info"
    >
      <span
        className="feed_widget__author"
      >
        ReactMcReactyFace
      </span>
      <span
        className="feed_widget__date"
      >
        April 15, 2018
      </span>
    </span>
  </div>
</div>
`;
